:rotating_light: fixed clazz.newInstance() warning